--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "11.0.5",
     "@angular/compiler": "11.0.5",
     "@angular/core": "11.0.5",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "11.0.5",
     "@angular/http": "7.2.16",
     "@angular/localize": "^11.0.5",
@@ -33,6 +34,7 @@
     "classlist.js": "1.1.20150312",
     "copy-webpack-plugin": "7.0.0",
     "core-js": "3.8.1",
+    "firebase": "^7.24.0",
     "font-awesome": "4.7.0",
     "hammerjs": "2.0.8",
     "jquery": "3.5.1",
